review distribuicao frequencias

--- a/estatistica_ML/saber_mais_1_tipos_variaveis.ipynb
+++ b/estatistica_ML/saber_mais_1_tipos_variaveis.ipynb
@@ -375,6 +375,396 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431710c5",
+   "metadata": {},
+   "source": [
+    "## identificando dados qualitativos nominais e ordinais em números\n",
+    "\n",
+    "\n",
+    "Em análise de dados, é comum encontrar variáveis numéricas que, na verdade, representam categorias. Por exemplo, códigos de identificação, classificações ou respostas de pesquisas codificadas numericamente. Essas variáveis são qualitativas e podem ser de dois tipos principais:\n",
+    "\n",
+    "* ***Nominais***: Categorias sem uma ordem lógica, como gêneros `(1 = Masculino, 2 = Feminino) ou departamentos (1 = TI, 2 = RH, 3 = Marketing)`.\n",
+    "\n",
+    "* ***Ordinais***: Categorias com uma ordem natural, como níveis de satisfação `(1 = Insatisfeito, 2 = Neutro, 3 = Satisfeito)`.\n",
+    "Tratar adequadamente essas variáveis é essencial para evitar erros, como realizar operações matemáticas em dados que representam categorias. Em Python, podemos usar a biblioteca pandas para tratar essas variáveis corretamente, especialmente com o tipo Categorical para variáveis ordinais.\n",
+    "\n",
+    "### O que é um Categorical?\n",
+    "Em Python, o Categorical do pandas é usado para representar variáveis categóricas. Ele permite armazenar as categorias de forma eficiente e, no caso de variáveis ordinais, definir uma ordem específica para elas. Isso facilita a manipulação e análise dos dados.\n",
+    "\n",
+    "#### Exemplo:\n",
+    "\n",
+    "Uma empresa realiza uma pesquisa de satisfação com clientes e coleta os seguintes dados:\n",
+    "\n",
+    "* `cliente_id`: Número de identificação do cliente (nominal).\n",
+    "* `nivel_satisfacao`: Respostas codificadas como 1 (Insatisfeito), 2 (Neutro), 3 (Satisfeito) (ordinal).\n",
+    "\n",
+    "O objetivo é transformar essas variáveis corretamente utilizando Categorical e visualizar a alteração. Podemos fazer isso da seguinte forma:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "2db7e3b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cliente_id</th>\n",
+       "      <th>nivel_satisfacao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>104</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cliente_id  nivel_satisfacao\n",
+       "0         101                 3\n",
+       "1         102                 2\n",
+       "2         103                 1\n",
+       "3         104                 3\n",
+       "4         105                 2"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# DataFrame de exemplo\n",
+    "dados_loja = pd.DataFrame({\n",
+    "    'cliente_id': [101, 102, 103, 104, 105],\n",
+    "    'nivel_satisfacao': [3, 2, 1, 3, 2]\n",
+    "})\n",
+    "dados_loja"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c56df785",
+   "metadata": {},
+   "source": [
+    "Convertendo a coluna nível de satisfação em categorica ordinal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "14f9ad5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CategoricalDtype(categories=[1, 2, 3], ordered=True, categories_dtype=int64)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "categorias_ordenadas = sorted(dados_loja['nivel_satisfacao'].unique())\n",
+    "\n",
+    "dados_loja['nivel_satisfacao'] = pd.Categorical(\n",
+    "    dados_loja['nivel_satisfacao'],\n",
+    "    categories=categorias_ordenadas,\n",
+    "    ordered=True\n",
+    ")\n",
+    "dados_loja['nivel_satisfacao'].dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "49f08208",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2, 1]\n",
+       "Categories (3, int64): [1 < 2 < 3]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_loja['nivel_satisfacao'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4f6a7a0",
+   "metadata": {},
+   "source": [
+    "Nomeando as categorias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9a6cd6d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cliente_id</th>\n",
+       "      <th>nivel_satisfacao</th>\n",
+       "      <th>categoria_satisfacao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Satisfeito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Insatisfeito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>104</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Satisfeito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cliente_id nivel_satisfacao categoria_satisfacao\n",
+       "0         101                3           Satisfeito\n",
+       "1         102                2               Neutro\n",
+       "2         103                1         Insatisfeito\n",
+       "3         104                3           Satisfeito\n",
+       "4         105                2               Neutro"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dicionário com o valor atual e o novo valor\n",
+    "avaliacao_labels = {\n",
+    "    1: 'Insatisfeito', \n",
+    "    2: 'Neutro', \n",
+    "    3: 'Satisfeito'\n",
+    "}\n",
+    "\n",
+    "# Aplicando a mudança\n",
+    "dados_loja['categoria_satisfacao'] = dados_loja['nivel_satisfacao'].map(avaliacao_labels)\n",
+    "\n",
+    "dados_loja"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c60112d5",
+   "metadata": {},
+   "source": [
+    "Ordenando os dados pela coluna categoria de satisfação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f64859a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cliente_id</th>\n",
+       "      <th>nivel_satisfacao</th>\n",
+       "      <th>categoria_satisfacao</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Satisfeito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>104</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Satisfeito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Neutro</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Insatisfeito</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   cliente_id nivel_satisfacao categoria_satisfacao\n",
+       "0         101                3           Satisfeito\n",
+       "3         104                3           Satisfeito\n",
+       "1         102                2               Neutro\n",
+       "4         105                2               Neutro\n",
+       "2         103                1         Insatisfeito"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_loja.sort_values('categoria_satisfacao', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc277908",
+   "metadata": {},
+   "source": [
+    "Note que ordenamos os dados de forma decrescente pela categoria_satisfacao, e o Categorical reconheceu a ordem definida nas categorias (de Satisfeito a Insatisfeito) com base no parâmetro `ordered=True`.\n",
+    "\n",
+    "O Categorical pode auxiliar em diversas situações na ciência de dados e análise com Python, como:\n",
+    "\n",
+    "* **Análise Estatística**: Para definir variáveis categóricas e quais estatísticas descritivas aplicar nesses casos.\n",
+    "* **Visualização de** Dados: Facilita a criação de gráficos categóricos, como gráficos de barras, usando bibliotecas como Matplotlib e Seaborn.\n",
+    "* **Machine Learning**: Prepara variáveis categóricas para algoritmos que não aceitam dados numéricos diretamente.\n",
+    "* **Manipulação de Dados**: Permite ordenações e agrupamentos em tabelas e relatórios.\n",
+    "Logo, transformar variáveis numéricas que expressam variáveis categóricas em Categorical garante maior precisão e facilita a interpretação em análises qualitativas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "973a3a19",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
