--- a/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
+++ b/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -325,7 +325,7 @@
        "4  Rondônia     1     47    8               9    150    1.69"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,14 +503,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "-U2sGssNG3B4"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.special import comb\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8320987112741390144276341183223364380754172606361245952449277696409600000000000000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#fatorial\n",
+    "\n",
+    "def fat(n):\n",
+    "    if(n == 0):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n * fat(n-1)\n",
+    "    \n",
+    "fat(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def recursive_sum(n):\n",
+    "    if (n < 1):\n",
+    "        return 0\n",
+    "    else: \n",
+    "        return  n + recursive_sum(n -1)\n",
+    "     \n",
+    "    \n",
+    "recursive_sum(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fat_recursivo(n):\n",
+    "    #5!= 5 * 4 * 3 * 2 * 1\n",
+    "    i = n\n",
+    "    while i > 1:\n",
+    "        n *= (i-1)\n",
+    "        i -= 1\n",
+    "\n",
+    "    return n\n",
+    "fat_recursivo(5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -559,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -569,12 +655,26 @@
     "id": "c2t7yHl7G3B9",
     "outputId": "6d1e9337-9d68-4866-9e48-3dbb3f81d07d"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(50063860.0)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combinacoes = comb(60, 6)\n",
+    "combinacoes "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -584,8 +684,64 @@
     "id": "LpioeTSXG3CB",
     "outputId": "d1e0ab82-be84-423c-e206-a9f8e1437df4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.000000019974489'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = 1 / combinacoes\n",
+    "f'{probabilidade:.15f}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.000018821757952'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comb_exercicio = comb(25, 20)\n",
+    "probabilidade = 1 / comb_exercicio\n",
+    "f'{probabilidade:.15f}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(53130.0)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comb_exercicio"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -619,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -629,8 +785,22 @@
     "id": "WmnjMTnYG3CH",
     "outputId": "859f37e5-992a-4ccf-fbfb-4e2cf52c4373"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 10\n",
+    "n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -684,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -694,8 +864,23 @@
     "id": "AazGDtt0G3CS",
     "outputId": "ccb9e561-0413-43c8-c462-ebea4b6c1097"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_alternativas_questao = 3\n",
+    "p = 1 / num_alternativas_questao\n",
+    "p"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -709,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -719,8 +904,22 @@
     "id": "FRhmjCnpG3CZ",
     "outputId": "f521f041-ecf4-4c4c-b696-da7b949d657a"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6666666666666667"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q = 1 - p\n",
+    "q "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -734,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -744,8 +943,22 @@
     "id": "MmHpiIIuG3Cj",
     "outputId": "6975cb4f-5cd3-4234-f7b0-b5d01ceb0430"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 5\n",
+    "k"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -759,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -769,8 +982,19 @@
     "id": "tZBbMIzKG3Cn",
     "outputId": "cb9ddc72-bd3a-40e6-f432-ad02048a3047"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade de acerto de 5 perguntas é de: 0.13656455%\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob = (comb(n, k) * (p ** k) * (q ** (n - k)))\n",
+    "print(f'A probabilidade de acerto de 5 perguntas é de: {prob:.8f}%')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -785,14 +1009,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "rhlsI3iLG3Cr"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade de acerto de 5 perguntas é de: 0.13656455%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import binom\n",
+    "\n",
+    "prob2 = binom.pmf(k, n, p)\n",
+    "print(f'A probabilidade de acerto de 5 perguntas é de: {prob2:.8f}%')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -835,30 +1072,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade de passar: 0.21312808%\n"
+     ]
+    }
+   ],
+   "source": [
+    "soma = 0\n",
+    "for i in range(k, n + 1):\n",
+    "    soma += binom.pmf(i, n, p)\n",
+    "\n",
+    "print(f'A probabilidade de passar: {soma:.8f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade de passar: 0.21312808%\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(f'A probabilidade de passar: {binom.pmf([x for x in range(k, n+1)], n, p).sum():.8f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.21312808006909523)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - binom.cdf(4, n, p) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.21312808006909525)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.sf(4, n, p) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uma moeda, perfeitamente equilibrada, é lançada para o alto quatro vezes. Utilizando a distribuição binomial, obtenha a probabilidade de a moeda cair com a face coroa voltada para cima duas vezes."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n_moeda = 4 #num lancamentos\n",
+    "k_moeda = 2 #  quantidade coroa desejada\n",
+    "p_moeda = 1 / 2 #probabilidade\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.9453125)"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "binom.sf(2, n_moeda, p_moeda) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.37695312\n"
+     ]
+    }
+   ],
+   "source": [
+    "prob_moeda =binom.cdf(4, n_moeda, p_moeda) \n",
+    "print(f'{prob_moeda:.8f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Um dado, perfeitamente equilibrado, é lançado para o alto dez vezes. Utilizando a distribuição binomial, obtenha a probabilidade de o dado cair com o número cinco voltado para cima pelo menos três vezes."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.22477320212874055)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_dado = 10 #num lancamentos\n",
+    "k_dado = 3 #  quantidade coroa desejada\n",
+    "p_dado = 1 / 6 #probabilidade\n",
+    "\n",
+    "prob_dado =binom.sf(k_dado - 1, n_dado, p_dado) #REVISAR ISSO AQUI\n",
+    "prob_dado\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
