--- a/estatistica_2/Versão_bibliotecas.ipynb
+++ b/estatistica_2/Versão_bibliotecas.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -35,14 +35,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 0,
+      "execution_count": 2,
       "metadata": {
         "colab": {},
         "colab_type": "code",
         "id": "bcAPEvyqjJCx"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting scipy\n",
+            "  Downloading scipy-1.16.0-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (35.3 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m35.3/35.3 MB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0mm\n",
+            "\u001b[?25hRequirement already satisfied: numpy<2.6,>=1.25.2 in /home/jonathan/Documents/GitHub/oracle_one_alura/.venv/lib/python3.11/site-packages (from scipy) (2.3.1)\n",
+            "Installing collected packages: scipy\n",
+            "Successfully installed scipy-1.16.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "!pip install scipy\n"
+      ]
     }
   ],
   "metadata": {
