review proporcao binomial

--- a/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
+++ b/estatistica_2/Curso_de_Estatística_Parte_2.ipynb
@@ -1239,21 +1239,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3333333333333333"
+       "np.float64(2.2477320212874057)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "10 * prob_dado"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1287,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1297,12 +1299,27 @@
     "id": "Xw9b6ch3G3C1",
     "outputId": "b4bb8b11-5113-4cc9-bac1-59e9acaf67e6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade de: 0.21284094\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = .6\n",
+    "n = 12\n",
+    "k = 8\n",
+    "\n",
+    "probability = binom.pmf(k, n, p)\n",
+    "print(f'A probabilidade de: {probability:.8f}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1312,8 +1329,22 @@
     "id": "R3-RaxP5G3C3",
     "outputId": "180b09ba-666e-47c9-b476-224c71fdd5c0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(6.3852281856)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equipes = 30 * probability\n",
+    "equipes"
+   ]
   },
   {
    "cell_type": "code",
@@ -1347,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1357,8 +1388,21 @@
     "id": "Tg53uGL4G3DA",
     "outputId": "cf68634d-68fd-41c5-a9a1-98c5ead8b548"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1391,6 +1435,34 @@
    "source": [
     "Um restaurante recebe em média **20 pedidos por hora**. Qual a chance de que, em determinada hora escolhida ao acaso, o restaurante receba **15 pedidos**?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suponha que a probabilidade de um casal ter filhos com olhos azuis seja de 22%. Em 50 famílias, com 3 crianças cada uma, quantas podemos esperar que tenham dois filhos com olhos azuis?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
