review pd.crosstab

--- a/estatistica_ML/saber_mais_2_distribuicao_frequencia.ipynb
+++ b/estatistica_ML/saber_mais_2_distribuicao_frequencia.ipynb
@@ -845,9 +845,9 @@
     "\n",
     "As frequências relativas de uma tabela cruzada podem ser calculadas de três formas:\n",
     "\n",
-    "Por coluna: Cada valor na coluna é comparado ao total da respectiva coluna.\n",
-    "Por linha: Cada valor na linha é comparado ao total da respectiva linha.\n",
-    "Por todos os dados: Cada valor é comparado ao total geral.\n",
+    "- **Por coluna**: Cada valor na coluna é comparado ao total da respectiva coluna.\n",
+    "- **Por linha**: Cada valor na linha é comparado ao total da respectiva linha.\n",
+    "- **Por todos os dados**: Cada valor é comparado ao total geral.\n",
     "A seguir, apresentamos um exemplo prático para construir uma tabela cruzada e calcular frequências absolutas e relativas.\n",
     "\n",
     "Preferências de estilo musical por região\n",
